@@ -48,7 +48,7 @@ class LMSFinanceManager extends LMSManager implements LMSFinanceManagerInterface
                                             a.at, a.suspended, a.invoice, a.settlement,
                                             a.datefrom, a.dateto, a.pdiscount, a.vdiscount,
                                             a.attribute, a.liabilityid, t.uprate, t.upceil,
-                                            t.downceil, t.downrate,
+                                            t.downceil, t.downrate, t.type AS tarifftype,
                                             (CASE WHEN t.value IS NULL THEN l.value ELSE t.value END) AS value,
                                             (CASE WHEN t.name IS NULL THEN l.name ELSE t.name END) AS name,
                                             d.number AS docnumber, d.type AS doctype, d.cdate, np.template
